<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">自动打卡</string>
    <string name="app_name_experiment">自动打卡测试版</string>
    <string name="tab_text_2">历史填报</string>
    <string name="action_settings">设置</string>

    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">消息</string>
    <string name="sync_header">同步</string>

    <!-- Messages Preferences -->
    <string name="signature_title">你的签名</string>
    <string name="reply_title">默认回复</string>

    <!-- Sync Preferences -->
    <string name="sync_title">定期同步电子邮件</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_saved_data">查看已经保存的数据</string>
    <string name="title_setting_data_category">数据</string>
    <string name="title_placeholder">默认标题</string>
    <string name="content_placeholder">默认内容</string>
    <string name="tab_text_1">每日打卡</string>
    <string name="lstb_text">由于接口适配问题，该功能暂时不开放。联系原作者催更</string>
    <string name="switch_texton">自动打卡已开启！</string>
    <string name="switch_textoff">自动打卡已关闭！</string>
    <string name="alert_my_title">在这里可以查询你今天的打卡次数</string>

    <string name="name_view_times">查询自己是否打卡</string>
    <string name="name_action_view_other_times">查询其他同学打卡次数</string>
    <string name="title_acion_view_other_times">输入其他同学的学号：</string>
    <string name="category_background">后台</string>
    <string name="title_background_setting">使用GMS统一推送服务</string>
    <string name="decoration_description">装饰描述</string>
    <string name="hint_default">默认暗示</string>
    <string name="texton_background_setting">应用无需常驻后台，应用未启动时数据推送由系统完成</string>

    <string name="state_yes">是</string>
    <string name="state_no">否</string>
    <string name="toast_xh_noeffect">你输入的学号无效，请重新输入</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_search">查询</string>

    <string name="toast_todayfill">今日打卡</string>
    <string name="times">次</string>
    <string name="error_toast">出错了，请重试</string>

    <string name="msg_token_fmt" translatable="false">获得到的InstanceID为: %s</string>
    <string name="string_empty_data">清空所有数据</string>
    <string name="summary_saved_data">在这里可以检查数据是否填写正确，请确保数据填写正确再提交</string>
    <string name="summary_empty_data">注意：此举将会删除你已经填写所有数据并恢复数据到默认状态</string>

    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="empty_data_warning">你确定要清空所有数据吗</string>
    <string name="empty_data_warning_content">清空的数据将无法恢复,清空数据后，重启APP生效</string>
    <string name="empty_data_successful">数据已清空</string>
    <string name="empty_data_fail">数据未成功清空，请重试</string>
    <string name="not_available_show">功能暂时不可用</string>
    <string name="check_rethrive_registration">检索当前注册令牌</string>
    <string name="theme">主题</string>
    <string name="use_nightmood">启用夜间模式</string>
    <string name="menu_confirm">确认</string>
</resources>