<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.autofill.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_times"
        android:orderInCategory="100"
        android:title="@string/name_view_times"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_other_times"
        android:orderInCategory="50"
        android:title="@string/name_action_view_other_times"
        app:showAsAction="never" />

</menu>