<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mrdk_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/decoration_description" />

        <TextView
            android:id="@+id/mrdk_title"
            style="@style/MainDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mrdk_image"
            android:maxLines="2"
            android:padding="4dp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:text="@string/title_placeholder"
            android:textColor="@color/colorTextPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:fontFamily="@font/actor"
            />

        <EditText
            android:id="@+id/edit_data"
            style="@style/MainDetailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mrdk_title"
            android:gravity="center_horizontal"
            android:hint="@string/hint_default"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:singleLine="false"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/select_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_data"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:layout_weight="1"
                android:text="@string/state_yes" />

            <RadioButton
                android:id="@+id/radiobutton_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:layout_weight="1"
                android:text="@string/state_no" />
        </RadioGroup>


    </RelativeLayout>


</androidx.cardview.widget.CardView>